Updating DlToDRealConverter class for Sequential composition and Program Assignments